--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Use 'if', 'else', 'else if' for condition</li>
+          <li>'for' for loop</li>
+          <li>create the function with 'function' & call it by 'function()'</li>
+          <li>code read from top to bottom</li>
         </ul>
 
       </section>
